<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/buttonset_properties_rl"
	android:layout_width = "300dip"
	android:layout_height = "400dip">
	
	<TextView
		android:id="@+id/titlebar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:text="@string/title_edit_button_set_defaults"
		android:textColor="#FF333333"
		android:background="#FF999999"
		android:textSize="15sp"
		android:textStyle="bold"
		android:gravity="center"/>
		
		
		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnset_cancel_btn"
			android:text="@string/btn_cancel"
			android:layout_alignParentEnd="true"
			android:layout_alignParentBottom="true"/>
		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnset_done_btn"
			android:text="@string/btn_done"
			android:layout_alignParentBottom="true"
			android:layout_alignParentStart="true"
			android:layout_toStartOf="@id/btnset_cancel_btn"/>
		
		
		
		<ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@id/btnset_done_btn"
			android:layout_below="@id/titlebar"
			android:scrollbarStyle="insideInset"
			android:scrollbarAlwaysDrawVerticalTrack="true"
			android:id="@+id/btn_set_editor_scroll">
			<LinearLayout android:layout_width="300dip" android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginEnd="10sp">
				
				<LinearLayout android:layout_marginTop="10dip" android:layout_width="300dip" android:layout_height="wrap_content" android:layout_marginStart="10dip" android:layout_marginEnd="10dip" android:orientation="horizontal">
					<TextView android:text="@string/label_name" android:layout_marginEnd="5dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:labelFor="@id/name"/>
					<EditText android:id="@+id/name" android:inputType="text" android:layout_marginEnd="15dip" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="1" android:autofillHints="username"/>
				</LinearLayout>
				
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_button_colors"  android:layout_marginTop="10sp" android:background="@drawable/movemethod_frame" android:layout_marginBottom="-3sp"/>
				
				<TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/movemethod_frame" android:stretchColumns="*">
				
				
				<TableRow android:layout_width="match_parent" android:layout_marginTop="10sp" android:layout_height="30sp">
					<Button style="?android:attr/buttonBarButtonStyle" android:layout_marginStart="2sp" android:layout_marginEnd="2sp" android:id="@+id/btnset_defaultcolor" android:background="#FF000000" android:layout_height="40sp"/>
					<Button style="?android:attr/buttonBarButtonStyle" android:layout_marginStart="2sp" android:layout_marginEnd="2sp" android:id="@+id/btnset_focuscolor" android:background="#FF000000" android:layout_height="40sp"/>
					<Button style="?android:attr/buttonBarButtonStyle" android:layout_marginStart="2sp" android:layout_marginEnd="2sp" android:id="@+id/btnset_flippedcolor" android:background="#FF000000" android:layout_height="40sp"/>
				</TableRow>
				<TableRow >
					<TextView  android:text="@string/label_normal" android:gravity="center"/>
					<TextView  android:text="@string/label_focused" android:gravity="center"/>
					<TextView  android:text="@string/label_flipped" android:gravity="center"/>
				</TableRow>
				
				<TableRow  android:layout_marginTop="10sp" >
					<Button style="?android:attr/buttonBarButtonStyle" android:layout_marginStart="2sp" android:layout_marginEnd="2sp" android:id="@+id/btnset_labelcolor" android:background="#FF000000" android:layout_height="40sp"/>
					<Button style="?android:attr/buttonBarButtonStyle" android:layout_marginStart="2sp" android:layout_marginEnd="2sp" android:id="@+id/btnset_fliplabelcolor" android:background="#FF000000" android:layout_height="40sp"/>
				</TableRow>
				<TableRow >
					<TextView android:text="@string/label_label_text" android:gravity="center"/>
					<TextView android:text="@string/label_flip_label" android:gravity="center"/>
				</TableRow>
			</TableLayout>
			

			
			<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:orientation="horizontal">
				<LinearLayout android:layout_marginStart="5sp" android:layout_marginEnd="5sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/blue_frame_nomargin" android:orientation="vertical">
					<TextView android:text="@string/label_label_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:labelFor="@id/btnset_editor_lblsize_et"/>
					<EditText android:id="@+id/btnset_editor_lblsize_et" android:width="30sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="number" android:singleLine="true" android:importantForAutofill="no"/>
				</LinearLayout>
				<LinearLayout android:layout_marginStart="5sp" android:layout_marginEnd="5sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/blue_frame_nomargin" android:orientation="vertical">
					<TextView android:text="@string/label_width" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:labelFor="@id/btnset_editor_width_et"/>
					<EditText android:id="@+id/btnset_editor_width_et" android:width="30sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="number" android:singleLine="true" android:importantForAutofill="no"/>
				</LinearLayout>
				<LinearLayout android:layout_marginStart="5sp" android:layout_marginEnd="5sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/blue_frame_nomargin" android:orientation="vertical">
					<TextView android:text="@string/label_height" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:labelFor="@id/btnset_editor_height_et"/>
					<EditText android:id="@+id/btnset_editor_height_et" android:width="30sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="number" android:singleLine="true" android:importantForAutofill="no"/>
				</LinearLayout>
			</LinearLayout>
			
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_when_locked"  android:layout_marginTop="10sp" android:background="@drawable/movemethod_frame" android:layout_marginBottom="-3sp"/>
				
				<TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/movemethod_frame" android:stretchColumns="*">
				
				
				<TableRow android:layout_width="match_parent" android:layout_marginTop="10sp" android:layout_height="30sp">
					<CheckBox android:layout_width="wrap_content"
							  android:layout_height="wrap_content"
							  android:id="@+id/locknewbuttons"
							  android:text="@string/option_disable_button_creation"/>
				</TableRow>
				<TableRow android:layout_width="match_parent" android:layout_marginTop="10sp" android:layout_height="30sp">
					<CheckBox android:layout_width="wrap_content"
							  android:layout_height="wrap_content"
							  android:id="@+id/lockmovebuttons"
							  android:text="@string/option_disable_button_movement"/>
				</TableRow>
				<TableRow android:layout_width="match_parent" android:layout_marginTop="10sp" android:layout_height="30sp">
					<CheckBox android:layout_width="wrap_content"
							  android:layout_height="wrap_content"
							  android:id="@+id/lockeditbuttons"
							  android:text="@string/option_disable_button_editing"/>
				</TableRow>
				</TableLayout>
			</LinearLayout>
			</ScrollView>
		
</RelativeLayout>