<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="10dip"
    android:layout_marginEnd="10dip"
    android:orientation="vertical" >










    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF999999"
        android:gravity="center_horizontal"
        android:text="@string/title_gag_responder"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF333333"
        android:textSize="15sp"
        android:textStyle="bold" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >


        <CheckBox
            android:id="@+id/gag_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_gag_from_output" />


        <CheckBox
            android:id="@+id/gag_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_gag_from_log" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_retarget_to_window"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/retarget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >




        <Button
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_done" />




        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

    </LinearLayout>

</LinearLayout>