<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/newaliaslayout"
  android:layout_width="300dip"
  android:layout_height="200dip">
  
  <TextView
		android:id="@+id/titlebar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:text="@string/title_new_direction"
		android:textColor="#FF333333"
		android:background="#FF999999"
		android:textSize="15sp"
		android:textStyle="bold"
		android:gravity="center"/>
  
  
   <Button
  	android:layout_width="100dip"
  	android:layout_height="wrap_content"
  	android:text="@string/btn_cancel"
  	android:id="@+id/new_sw_cancel_button"
  	android:layout_alignParentBottom="true"
  	android:layout_alignParentEnd="true"/>
  <Button
  	android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/btn_add_direction"
  	android:id="@+id/new_sw_done_button"
  	android:layout_alignParentBottom="true"
  	android:layout_toStartOf="@+id/new_sw_cancel_button"
  	android:layout_alignParentStart="true"/>
  	
  <RelativeLayout
  	android:layout_width="200dip"
  	android:layout_height="wrap_content"
  	android:layout_above="@id/new_sw_done_button"
  	android:layout_below="@id/titlebar"
  	android:layout_marginStart="5dip"
  	android:layout_marginEnd="5dip">
  		<TextView 
  			android:id="@+id/dirlabel"
  			android:layout_marginTop="10dip"
  			android:layout_alignParentTop="true"
  			android:layout_alignParentStart="true"
  			android:layout_width="80dip"
  			android:layout_height="wrap_content"
 			android:text = "Direction:"/>
  		<EditText
  			android:id = "@+id/sw_dir"
  			android:layout_width="60dip"
  			android:maxWidth="60dip"
  			android:maxLength="1"
  			android:singleLine = "true"
  			android:layout_toEndOf="@id/dirlabel"
  			android:layout_alignParentTop="true"
  			android:layout_height="wrap_content"
  			android:hint="@string/label_dir" />
  		 <TextView 
  		 	android:layout_marginTop="10dip"
  			android:layout_below="@id/sw_dir"
  			android:layout_alignParentStart="true"
  			android:id="@+id/cmdlabel"
  			android:layout_width="80dip"
  			android:layout_height="wrap_content"
 			android:text = "Command:"/>
  		<EditText
  			android:id="@+id/sw_cmd"
  			android:layout_width="200dip"
  			android:maxWidth="200dip"
  			android:layout_height="wrap_content"
  			android:singleLine="true"
  			android:layout_toEndOf="@id/cmdlabel"
  			android:layout_below="@id/sw_dir"
  			android:hint="@string/label_command_text" /> 
  	</RelativeLayout>
  
</RelativeLayout>