<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:background="#FF000000"
  	android:orientation="horizontal">
  	
  	<LinearLayout
  	  	android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:background="#FF000000"
  		android:layout_marginEnd="5dip"
  		android:orientation="vertical">
		  	<CheckBox
		  		android:id="@+id/checkbox"
		  		android:layout_width="40dip"
		  		android:layout_height="wrap_content"/>
		  	<TextView
		  		android:layout_width="40dip"
		  		android:layout_height="wrap_content"
		  		android:text="@string/option_auto"
		  		android:textSize="12sp"
		  		android:textStyle="bold"
		  		android:gravity="top|center"/>
		  	
  	</LinearLayout>
  	<LinearLayout
  	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:background="#FF000000"
	  	android:layout_marginEnd="5dip"
	  	android:orientation="vertical">	
		  	<EditText android:layout_width="60dip" 
	  			android:layout_height="wrap_content" 
	  			android:text="@string/hint_seventy_seven"
	  			android:id="@+id/text"
	  			android:inputType="number"/>
	  		<TextView
		  		android:layout_width="60dip"
		  		android:layout_height="wrap_content"
		  		android:text="@string/label_chars"
		  		android:textSize="12sp"
		  		android:textStyle="bold"
		  		android:id="@+id/extra"
		  		android:gravity="top|center"/>
	  </LinearLayout>
</LinearLayout>