<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/button_properties_rl"
	android:layout_width = "300dp"
	android:layout_height = "200dp">
	<ScrollView
		android:layout_width = "wrap_content"
		android:layout_height = "150dp">
		<RelativeLayout
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content">
			<TableLayout
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:id="@+id/maintable">
				<TableRow
					android:layout_width="300dp"
					android:layout_height="wrap_content">
						<TextView
							android:id="@+id/lbl_label"
							android:layout_width = "wrap_content"
							android:layout_height = "wrap_content"
							android:textSize="22sp"
							android:text = "LABEL:"
							android:layout_alignParentTop = "true"
							android:layout_alignParentStart = "true"/>
						<EditText
							android:id = "@+id/button_text_et"
							android:layout_width = "225dp"
							android:singleLine = "true"
							android:layout_height = "wrap_content"
							android:layout_toEndOf="@id/lbl_label"/>
				</TableRow>

				<TableRow		
				android:layout_width="300dp"
				android:layout_height="wrap_content">
					<TextView
					android:id="@+id/cmd_label"
					android:layout_width = "wrap_content"
					android:layout_height = "wrap_content"
					android:textSize="22sp"
					android:layout_below = "@id/lbl_label"
					android:layout_alignBottom = "@id/button_text_et"
					android:text = "CMD:"/>
					<EditText
					android:id = "@+id/button_command_et"
					android:layout_width = "225dp"
					android:layout_height = "wrap_content"
					android:singleLine = "true"
					android:layout_toEndOf ="@id/cmd_label"
					android:layout_alignTop ="@id/cmd_label"/>	
				</TableRow>
				
				<TableRow		
				android:layout_width="300dp"
				android:layout_height="wrap_content">
					<TextView
					android:id="@+id/flip_label_label"
					android:layout_width = "wrap_content"
					android:layout_height = "wrap_content"
					android:textSize="22sp"
					android:layout_below = "@id/cmd_label"
					android:layout_alignBottom = "@id/button_command_et"
					android:text = "LBL2:"/>
					<EditText
					android:id = "@+id/button_flip_label_et"
					android:layout_width = "225dp"
					android:layout_height = "wrap_content"
					android:singleLine = "true"
					android:layout_toEndOf ="@id/flip_label_label"
					android:layout_alignTop ="@id/flip_label_label"/>	
				</TableRow>
				
				<TableRow		
				android:layout_width="300dp"
				android:layout_height="wrap_content">
					<TextView
					android:id="@+id/flip_label"
					android:layout_width = "wrap_content"
					android:layout_height = "wrap_content"
					android:textSize="22sp"
					android:layout_below = "@id/cmd_label"
					android:layout_alignBottom = "@id/button_command_et"
					android:text = "FLIP:"/>
					<EditText
					android:id = "@+id/button_flip_et"
					android:layout_width = "225dp"
					android:layout_height = "wrap_content"
					android:singleLine = "true"
					android:layout_toEndOf ="@id/flip_label"
					android:layout_alignTop ="@id/flip_label"/>	
				</TableRow>
				
				
				
			</TableLayout>
	
			<TableLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/maintable">
				<TableRow
					android:layout_span="3">
						<CheckBox
						android:id="@+id/move_free"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
						<CheckBox
						android:id="@+id/move_nudge"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
						<CheckBox
						android:id="@+id/move_freeze"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
				</TableRow>
				<TableRow
				android:layout_span="3">
					<TextView
					android:layout_width="89dp"
					android:layout_height="wrap_content"
					android:text="@string/btn_mode_free"/>
					<TextView
					android:layout_width="89dp"
					android:layout_height="wrap_content"
					android:text="@string/btn_mode_nudge"/>
					<TextView
					android:layout_width="89dp"
					android:layout_height="wrap_content"
					android:text="@string/btn_mode_freeze"/>
				</TableRow>
				<TableRow android:layout_span = "3" android:layout_marginTop="13sp">
					<Button android:layout_width="30dp" android:width="30dp" android:layout_height="60dp" android:id="@+id/btn_defaultcolor" android:background="#FF000000"/>
					<Button android:layout_width="30dp" android:width="30dp" android:layout_height="60dp" android:id="@+id/btn_focuscolor" android:background="#FF000000"/>
					<Button android:layout_width="30dp" android:width="30dp" android:layout_height="60dp" android:id="@+id/btn_flippedcolor" android:background="#FF000000"/>
				</TableRow>
				<TableRow android:layout_span = "3">
					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_normal"/>
					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_focused"/>
					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_flipped"/>
				</TableRow>
				<TableRow android:layout_span ="2" android:layout_marginTop="5sp">
					<Button android:layout_width="30dp" android:width="30dp" android:layout_height="60dp" android:id="@+id/btn_labelcolor" android:background="#FF000000"/>
					<Button android:layout_width="30dp" android:width="30dp" android:layout_height="60dp" android:id="@+id/btn_fliplabelcolor" android:background="#FF000000"/>
				</TableRow>
				<TableRow android:layout_span = "2">
					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_label_text"/>
					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_flip_label"/>
				</TableRow>
			</TableLayout>
		</RelativeLayout>
	</ScrollView>
	<Button
		android:id = "@+id/button_delete_btn"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentStart="true"
		android:text = "Delete"/>
	<Button
		android:id = "@+id/button_done_btn"
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_toEndOf="@id/button_delete_btn"
		android:layout_alignTop="@id/button_delete_btn"
		android:text = "Done!"/>



		
	
</RelativeLayout>